--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <div class="circleontop"></div>
     <header>
         <nav>
             <a href = "http://localhost:63342/ShoppingCart/index.html?_ijt=58p268jbpf3eg036nhdu9emgrn&_ij_reload=RELOAD_ON_SAVE"> <div class="logo">Sklavi</div> </a>
