add shopping page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
 
     <main>
-        <h1>Welcome to Sklavi!</h1>
+        <h1>Welcome to Sklavi Shop!</h1>
         <p> Here you can buy our stuff</p><a href = "http://localhost:63342/ShoppingCart/shop.html?_ijt=avn7ihib4pbni1rp6sghji9k30&_ij_reload=RELOAD_ON_SAVE" class="shop-button"> Shop now  </a>
     </main>
 </body>
