--- a/shop.html
+++ b/shop.html
@@ -12,7 +12,8 @@
     <header>
         <nav>
             <a href = "http://localhost:63342/ShoppingCart/index.html?_ijt=58p268jbpf3eg036nhdu9emgrn&_ij_reload=RELOAD_ON_SAVE"> Home </a>
-            <a href = "mycart"> <img src="https://cdn-icons-png.flaticon.com/128/891/891407.png"
+            <a href="#" onclick="showCart()">
+            <img src="https://cdn-icons-png.flaticon.com/128/891/891407.png"
                                      width = "33" height = "33" alt="Cart">
             </a>
         </nav>
@@ -48,6 +49,7 @@
             <button onclick="addToCart(4, 'Shirt', 25)">Add to cart</button>
         </div>
     </div>
+    <div id="cart-container" class="cart"></div>
     <script src="script.js"></script>
 </body>
 </html>
