--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <div class="circleontop"></div>
     <header>
         <nav>
-            <a href = "http://localhost:63342/ShoppingCart/index.html?_ijt=58p268jbpf3eg036nhdu9emgrn&_ij_reload=RELOAD_ON_SAVE"> <div class="logo">Sklavi</div> </a>
+            <a href="index.html">Sklavi</a>
         </nav>
         <nav>
-            <a href = "http://localhost:63342/ShoppingCart/index.html?_ijt=58p268jbpf3eg036nhdu9emgrn&_ij_reload=RELOAD_ON_SAVE"> Home </a>
+            <a href="index.html">Home</a>
             <a href="#" onclick="showCart()">
                 <img src="https://cdn-icons-png.flaticon.com/128/891/891407.png"
                      width = "33" height = "33" alt="Cart">
@@ -26,7 +26,7 @@
 
     <main>
         <h1>Welcome to Sklavi Shop!</h1>
-        <p> Here you can buy our stuff</p><a href = "http://localhost:63342/ShoppingCart/shop.html?_ijt=avn7ihib4pbni1rp6sghji9k30&_ij_reload=RELOAD_ON_SAVE" class="shop-button"> Shop now  </a>
+        <p> Here you can buy our stuff</p><a href="shop.html" class="shop-button">Shop Now</a>
     </main>
     <div id="cart-container" class="cart"></div>
     <script src="script.js"></script>
