--- a/shop.html
+++ b/shop.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <a href = "http://localhost:63342/ShoppingCart/index.html?_ijt=58p268jbpf3eg036nhdu9emgrn&_ij_reload=RELOAD_ON_SAVE"> Home </a>
+            <a href="index.html">Home</a>
             <a href="#" onclick="showCart()">
             <img src="https://cdn-icons-png.flaticon.com/128/891/891407.png"
                                      width = "33" height = "33" alt="Cart">
