--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="circleontop"></div>
     <header>
         <nav>
-            <a href="index.html">Sklavi</a>
+            <a href="index.html"><div class="logo">Sklavi</div> </a>
         </nav>
         <nav>
             <a href="index.html">Home</a>
